# CoMAC

./: README.md  classification_modules.py  data_utils.py  eval_utils.py  evaluate_test.py  evaluate_test_ppl.py  get_comac_tfidf.py  inference_test.py  pyproject.toml  run_ncolbert_v6.sh  train.py  utils_focus.py
